--- a/.github/workflows/bump_publish.yml
+++ b/.github/workflows/bump_publish.yml
@@ -1,5 +1,6 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
-on: workflow_dispatch
+# on: workflow_dispatch
+on: push
 jobs:
   build:
     runs-on: ubuntu-latest
