--- a/.github/workflows/bump_publish.yml
+++ b/.github/workflows/bump_publish.yml
@@ -1,7 +1,7 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
-# on: workflow_dispatch
+on: workflow_dispatch
 # on: push
-on: release
+#on: release
 jobs:
   build:
     runs-on: ubuntu-latest
