--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 allow-direct-references = true
 
 [project]
-name = "helpers_drscook"
+name = "helpers"
 dynamic = ["version"]
 description = "Commonly used helpers"
 dependencies = ['codetiming', 'shutils', 'numpy', 'pandas', 'matplotlib', 'jupyter-autotime']
